--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ram Guest House - Your Home Away From Home</title>
     <meta name="description" content="Experience comfort and hospitality at Shree Ram Guest House. Modern amenities, traditional warmth, and excellent service in a peaceful location." />
@@ -10,11 +11,8 @@
     <meta property="og:title" content="Shree Ram Guest House - Your Home Away From Home" />
     <meta property="og:description" content="Experience comfort and hospitality at Shree Ram Guest House. Modern amenities, traditional warmth, and excellent service." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+ 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
